# modern-desktop-app-template

./: .editorconfig  .gitignore  .nvmrc  App.js  LICENSE.md  README.md  SAMPLE_README.md  index.html  index.js  main.py  pacakge.json  package.json  pnpm-lock.yaml  postcss.config.js  requirements.txt  utils.js  vite.config.js  vite.config.ts
.github/workflows/: a  a.yml  arm.yml  build.yml
environment/: apt_packages.txt
public/: index.css
src/: AboutExample.jsx  App.jsx  App.module.css  App.tsx  Fallback.jsx  Providers.jsx  Providers.tsx  TauriProvider.jsx  ViewExample.jsx  dualStorage.js  i18n.js  main.jsx  main.tsx  tsconfig.json  utils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: lib.rs  main.rs  sys_tray.rs  test.rs  tray_icon.rs  utils.rs
src/Components/: LanguageHeaders.jsx  ScrollToTop.jsx  TitleBar.jsx  TitleBar.module.css  Titlebar.jsx
src/Views/: ExampleView.jsx
src/common/: utils.js  utils.ts
src/components/: LanguageHeaders.tsx  Mantine.jsx  Mantine.module.css  Mantine.tsx  ScrollToTop.jsx  ScrollToTop.tsx
src/tauri/: TauriProvider.jsx  TauriProvider.tsx  TitleBar.jsx  TitleBar.module.css  TitleBar.tsx  storage.js  storage.ts
src/translations/: en.json  fr.json  i18n.js  i18n.ts  i18next.d.ts
src/views/: ExampleView.jsx  ExampleView.tsx  FallbackErrorBoundary.tsx  FallbackSuspense.tsx  LazyView.tsx  LoginView.jsx  Splashscreen.jsx  Splashscreen.tsx
test/: app.side  test.js  toggletheme.spec.js
